# test-web-assembly

./: .gitignore
c++/pacman.c/: CMakeLists.txt  build.bat  how to build wasm.txt
timer/timer-c++/: CMakeLists.txt  CMakeSettings.json  timer.cpp  timer.h
timer/timer-typescript/: package-lock.json  package.json  tsconfig.json  webpack.config.js
timer/timer-typescript/public/: app.css  index.html
timer/timer-typescript/src/: app.ts
typescript/: package-lock.json  package.json  webpack.config.js
typescript/public/: index.html
typescript/src/global/: global.ts
typescript/src/logger2/: logger2.ts
typescript/src/memory/: memory.ts
typescript/src/shared/: shared.ts  shared1.wat
typescript/src/simple/: simple.ts
typescript/src/table/: table.ts
typescript/src/table-wasm/: table-wasm.ts
